tests/NormalTests/paczka1/small_fuzzy/66641364.err
Error in line 4: S947 A445 64,09
Error in line 5: M1KgcwWFUYp A445 99,43
Error in line 2: S947 S441 29,6
Error in line 3: M1KgcwWFUYp S441 2,4
Error in line 7: M1KgcwWFUYp A445 332,7
